fixed orbit params

--- a/angular.json
+++ b/angular.json
@@ -81,8 +81,8 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/favicon.ico"
             ]
           }
         },
